# skychat

./: .npmrc  .prettierrc  Cargo.toml  README.md  app.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/cool-app/: app.json  package.json
apps/mobile/: app.json  package.json  tsconfig.json
client/: Cargo.toml
client/src/: client.rs
core/: Cargo.toml
core/client/src/: client.rs
core/core/: Cargo.toml
core/core/src/: lib.rs  manager.rs  utils.rs
core/examples/: Cargo.toml
core/examples/client/: tui.rs
core/examples/core/: tests.rs
core/examples/server/: main.rs  web.rs
core/server/: Cargo.toml
core/server/src/: server.rs
examples/: Cargo.toml
examples/client/: tui.rs
examples/core/: tests.rs
examples/server/: main.rs  web.rs
examples/tests/: tests.rs
lib/: app.json  babel.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
lib/example/: package.json  react-native.config.js
lib/example/ios/: Podfile
lib/example/ios/RNSkychatLibSpec/: RNSkychatLibSpec-generated.mm
lib/example/ios/SkychatLibExample.xcodeproj/: project.pbxproj
lib/example/src/: App.tsx
lib/rust_modules/uniffi-starter/rust/: Cargo.toml
lib/rust_modules/uniffi-starter/rust/foobar/: Cargo.toml
lib/rust_modules/uniffi-starter/rust/foobar/src/: lib.rs  wrappers.rs
lib/scripts/: gen-bin.sh
lib/src/: index.tsx  index2.tsx
lib/src/components/: Button.tsx  EmptyState.tsx  Header.tsx  Icon.tsx  ListItem.tsx  ListView.tsx  Screen.tsx  Text.tsx  TextField.tsx  index.ts
lib/src/components/bsky/: AccountBackup.tsx  BskyWebView.tsx  ChatSettings.tsx  PostRenderer.tsx
lib/src/components/chat/: BskyChat.tsx  Chat.tsx  ChatBubble.tsx  ChatHeader.tsx  ChatItem.tsx  ChatList.tsx  ChatMessageBox.tsx  ChatRequestsList.tsx  ChatWrapper.tsx  ConnectedMessage.tsx  NewChat.tsx  ReplyMessageBar.tsx  SearchCreate.tsx  SkyChat.tsx  UserList copy.tsx  UserList.tsx  styles.ts
lib/src/components/sheets/: chatSheets.tsx  sheets.tsx
lib/src/components/users/: UserList.tsx
lib/src/components/util/: utils.tsx
lib/src/components/utils/: utils.tsx
lib/src/contexts/: AppProvider.tsx  AuthContext.tsx  ChatContext.tsx  ConvoContext.tsx  strings.tsx
lib/src/i18n/: en.ts  es.ts  i18n.ts  ja.ts  translate.ts
lib/src/utils/: convo.ts  useAppTheme.ts  useSafeAreaInsetsStyle.ts
lib/src/utils/storage/: credential-storage.ts
mobile/: app.json  metro.config.js  package.json
mobile/scripts/: remake-js.sh  remake-lib.sh
mobile/src/app/: _layout.tsx
mobile/src/app/(app)/: _layout.tsx  error.tsx  index.tsx  invites.tsx  welcome.tsx
mobile/src/components/: AppInitializer.tsx
mobile/src/components/Chat/: ChatItem.tsx  ChatMessageBox.tsx  ConnectedMessage.tsx  MessageInput.tsx  NewChat.tsx  ReplyMessageBar.tsx
mobile/src/components/users/: UserList.tsx
mobile/src/contexts/: AppProvider.tsx  ConvoContext.tsx
mobile/src/i18n/: en.ts  es.ts  i18n.ts  ja.ts
mobile/src/models/: AuthenticationStore.ts  RootStore.ts
mobile/src/utils/: convo.ts
my-rust-lib2/: MyRustLib2.podspec  package.json
my-rust-lib2/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
my-rust-lib2/android/src/main/: AndroidManifest.xml
my-rust-lib2/android/src/main/java/com/myrustlib2/: MyRustLib2Module.kt  MyRustLib2Package.kt
my-rust-lib2/cpp/: react-native-my-rust-lib2.cpp  react-native-my-rust-lib2.h
my-rust-lib2/ios/: MyRustLib2.h  MyRustLib2.mm
my-rust-lib2/src/: NativeMyRustLib2.ts  index.tsx
scripts/: remake-js.sh  remake-lib.sh
server/: Cargo.toml
server/src/: server.rs
skychat-lib/: package.json  skychat-lib.podspec  tsconfig.json
skychat-lib/example/: package.json
skychat-lib/example/src/: App.tsx
skychat-lib/src/components/: Card.tsx
skychat-lib/src/theme/: colors.ts  colorsDark.ts
skychat-lib/src/utils/: convo.ts
skychat-mobile/: babel.config.js
skychat-mobile/scripts/: remake-js.sh  remake-lib.sh
skychat-mobile/src/contexts/: AppProvider.tsx
skychat-mobile/src/theme/: colorsDark.ts
src/: client.rs  convo.rs  lib.rs  main.rs  server.rs  utils.rs  web.rs
src/convo/: client.rs  manager.rs  mod.rs  server.rs
(+25 files in other folders)
