[package]
name = "skychat"
version = "0.1.0"
edition = "2021"

[dependencies]
openmls = "0.6.0"
openmls_basic_credential = "0.3.0"
openmls_rust_crypto = "0.3.0"
rand = "0.9.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.13.1", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
serde_json = { version = "1.0" }
serde = { version = "1.0.217", features = ["derive"] }
base64 = "0.22.1"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
colored = "3.0.0"


[dev-dependencies]
rocket = { version = "0.5.1", features = ["json"] }
crossterm = "0.26.0"
ratatui = "0.22.0"


[[example]]
name = "tests"
path = "examples/tests/tests.rs"

[[example]]
name = "server"
path = "examples/server/main.rs"

[[example]]
name = "client"
path = "examples/client/tui.rs"
