[workspace]
members = [
    "core",
    "client",
    "server",
    "examples"
] 

[workspace.dependencies]
colored = "2.0"
rand = "0.9.0"
openmls = "0.4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.1", features = ["json"] }
crossterm = "0.26.0"
ratatui = "0.22.0" 
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.13.1", features = ["v4", "fast-rng", "macro-diagnostics"] }