[workspace]
members = [
    "core",
    "client",
    "server",
    "examples"
] 

[workspace.dependencies]
# client:
rand = "0.9.0"
colored = "2.0"
reqwest = { version = "0.12", features = ["json"] }
ratatui = "0.22.0" 
crossterm = "0.26.0"
# server:
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.13.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
rocket = { version = "0.5.1", features = ["json"] }
# core:
openmls = "0.6.0"
openmls_basic_credential = "0.3.0"
openmls_rust_crypto = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
anyhow = "1.0" 