[package]
name = "skychat_client"
version = "0.1.0"
edition = "2021"

[dependencies]
skychat_core = { path = "../core" }
skychat_server = { path = "../server" }
uuid.workspace = true
reqwest.workspace = true
colored.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde_json.workspace = true
serde.workspace = true
anyhow.workspace = true
tokio.workspace = true